# operation_systems

./: .gitignore  CMakeLists.txt  basic_shell  sagi3.txt  text2.txt
Ex1/: README.txt
Task_1/: Makefile  app  app.c  cmp  text1.txt
Task_1/part_a/: Makefile  cobrimer.c  copy
Task_2/: Makefile  README.md
Task_2/Part_a/: cmp  copy.c  res.txt  res2.txt  text2.txt
Task_2/Part_b/: Makefile  codecA  codecA.c  encode.c
Task_2/Part_c/: basic_shell.c  stShell.c  syShell.c
Task_2/final/: Makefile  README.md  cmp  cmp.c  codecB.c  decode.c  stshell
Task_3/: Makefile  README.md  stnc.c
Task_3/Part_A/: Makefile  stnc.c
Task_3/Part_B/: README.md  chat.c  clientTCP.c  clientUdp.c  stnc  stnc.c
Task_4/: README.md  chat.c  chat.h  main  main.c  makefile  react_server  reactor.c  reactor.h
boot/: a.out  makefile  react_server  react_server.c  reactor.h
part k/: Makefile  clientUdp.c  stnc  test.c
